--- a/myapp/templates/vista_centro_comercial.html
+++ b/myapp/templates/vista_centro_comercial.html
@@ -1,4 +1,5 @@
 {% extends 'base.html'%}
+{% block title %} Tiendas del Centro Comercial {{ centro_comercial.nombre }} {% endblock %}
 {% block container %}
 
 
