--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -11,6 +11,7 @@
         {% endblock %}
     </title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/comercial.css' %}">
 </head>
 
@@ -21,6 +22,10 @@
 
     {% block footer %}
         {% include 'footer.html' %}
+    {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    {% block scripts %}
     {% endblock %}
 
 </body>
